--- a/orders/orders/templates/home.html
+++ b/orders/orders/templates/home.html
@@ -1,7 +1,7 @@
 {% load static %}
 <html>
 	<head>
-		<title></title>
+		<title>Interactive online Quiz</title>
 		<style>
 			body{
 				background-image:url("{%static 'quiz.jpeg'%}");
