--- a/orders/orders/templates/home.html
+++ b/orders/orders/templates/home.html
@@ -174,7 +174,7 @@
 		</div>
 		<div id="footer">
 			<div id="social">
-				<a href="https://www.facebook.com/"><image src="https://github.com/NallaVaishnavi/Micro-It-Internship/edit/main/orders/orders/static/fb.png" height="30" width="30"></a>
+				<a href="https://www.facebook.com/"><image src="orders/orders/static/fb.png" height="30" width="30"></a>
 				<a href="https://www.instagram.com/"><image src="{%static 'insta.jpeg'%}" height="30" width="30"></a>
 				<a href="https://www.linkedin.com/"><image src="{%static 'link.png'%}" height="30" width="30"></a>
 				<a href="https://www.twitter.com/"><image src="{%static 'twitter.png'%}" height="30" width="30"></a>
